fix: String.formatをString.formattedに変更